# fastui-mvp

./: README.md  constants.py  main.py  pyproject.toml  utils.py
